2009-02-15 Peter Aradi <peter.aradi@blumsoft.eu>
	* src/main.c:
        * src/common.h:
      	Major update, porting to evdev driver.
	tslib is used for reading device coordinates as a workaround;
	xinput did not report correct values, xsp is no longer available.
	FIXME: Extrapolated min and max values for coordinates are currently 
	written in xorg.conf, because HAL support is not available in xserver.
	FIXME: extrapolated values are close to reported raw coordinates in
	corners, but touchscreen seems inaccurate with them!
	Fixes: #NB95802

        * etc/Makefile.am:
        * debian/osso-applet-screencalibration.prerm:
        * debian/osso-applet-screencalibration.postinst:
        * debian/dirs:
        * src/launch.c:
        * etc/tscalibrate.sudoers:
	Added tscalibrate binary to sudoers: currently required for writing
	xorg.conf and for tslib.

        * configure.ac:
	* src/Makefile.am:
	Added Xi to dependencies, removed gtk from applet.

	* src/gfx.c:
	Removed invalid gtk dependency. Using Xinput2 for input event handling.
	FIXME: added temporary notification for device restart. (this will be
	fixed once HAL support is available for calibration in xserver)
        
        * etc/tscalibrate.desktop:
	Corrected "X-Text-Domain" field once again.

	Removed unnecesary files from repository.

2009-01-12 Peter Aradi <peter.aradi@blumsoft.eu>
	
	* etc/tscalibrate.desktop:
	Fixed icon name and localization component.